# sunflare

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  AUTHORS.rst  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  clean_build.bat  index.html  mkdocs.dev.yml  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  requirements-dev.txt  search.json  searchindex.js  sitemap.xml  tox.ini  zensical.toml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: -fb--feedback-requested.md  bug_report.md  documentation.md  feature_request.md  feedback-requested.md
.github/workflows/: ci.yaml  deploy-docs.yaml  deploy-docs.yml  deploy-pypi.yaml  deploy-testpypi.yaml  ruff-linting.yaml  run-code-analysis.yaml  run-tests.yaml  sunflare-ruff.yaml
_sources/: changelog.md.txt  getting_started.md.txt  index.md.txt
_sources/api/: config.md.txt  controller.md.txt  index.md.txt  model.md.txt  types.md.txt  virtual.md.txt
_sources/api/controller/: base.md.txt
_sources/api/engine/: detectors.md.txt  handler.md.txt  index.md.txt  lights.md.txt  motors.md.txt
_sources/crash_course/: inheritance.md.txt
_sources/overview/: in_process_model.md.txt
api/: index.html
api/config/: index.html
api/controller/: index.html
api/controller/base/: index.html
api/engine/: index.html
api/engine/detectors/: index.html
api/engine/handler/: index.html
api/engine/lights/: index.html
api/engine/motors/: index.html
api/engine/status/: index.html
api/log/: index.html
api/model/: index.html
api/types/: index.html
api/virtual/: index.html
changelog/: index.html
crash_course/: index.html
crash_course/inheritance/: index.html
docs/: Makefile  changelog.md  conf.py  getting_started.md  index.md  index.rst  installation.rst  make.bat  statement.md  usage.rst
docs/_static/: custom.css  custom.js  switcher.json
docs/api/: config.md  controller.md  engine.md  index.md  log.md  model.md  protocols.md  status.md  types.md  virtual.md
docs/api/controller/: index.md
docs/api/engine/: index.md  registry.md  status.md
docs/config/: config.md  enums.md  models.md
docs/crash_course/: index.md  inheritance.md
docs/explanation/: index.md  statement.md
docs/explanation/architecture/: in-process-model.md  index.md  models.md  presenters.md  virtual.md
docs/explanations/: index.md  statement.md
docs/explanations/architecture/: devices.md  in-process-device.md  presenters.md  storage.md  virtual.md
docs/how-to/: build-docs.md  index.md  installation.md  run-tests.md
docs/overview/: controllers.md  in_process_model.md  index.md  model.md  models.md  orchestrator_controllers.md  presenters.md  virtual.md
docs/reference/: api.md  changelog.md  index.md
docs/reference/api/: config.md  controller.md  engine.md  index.md  log.md  model.md  presenter.md  view.md  virtual.md
docs/tools/: index.md  model.md
docs/tutorials/: index.md
docs/tutorials/oop-crash-course/: index.md  inheritance.md
explanation/: index.html
explanation/architecture/: index.html
explanation/architecture/in-process-model/: index.html
explanation/architecture/models/: index.html
explanation/architecture/presenters/: index.html
explanation/architecture/virtual/: index.html
explanation/statement/: index.html
explanations/: index.html
explanations/architecture/devices/: index.html
explanations/architecture/in-process-device/: index.html
explanations/architecture/presenters/: index.html
explanations/architecture/storage/: index.html
explanations/architecture/virtual/: index.html
explanations/statement/: index.html
genindex/: index.html
getting_started/: index.html
how-to/: index.html
how-to/build-docs/: index.html
how-to/installation/: index.html
how-to/run-tests/: index.html
overview/: index.html
overview/controllers/: index.html
overview/in_process_model/: index.html
py-modindex/: index.html
redsun/: __init__.py  config.py
redsun/engine/: registry.py
redsun/engine/exengine/: handler.py  registry.py
redsuntools/: __init__.py  log.py
redsuntools/interface/: signalbus.py  virtualbus.py
reference/: index.html
reference/api/: index.html
reference/api/config/: index.html
reference/api/controller/: index.html
reference/api/engine/: index.html
reference/api/log/: index.html
reference/api/model/: index.html
reference/api/presenter/: index.html
reference/api/view/: index.html
reference/api/virtual/: index.html
reference/changelog/: index.html
search/: index.html  search_index.json
src/sunflare/: __init__.py  _utils.py  config.py  controller.py  device.py  errors.py  log.py  model.py  presenter.py  types.py  utils.py  virtual.py  virtualbus.py
src/sunflare/containers/: __init__.py  _registry.py
src/sunflare/controller/: __init__.py  _base.py  _mixin.py  _protocols.py  base.py  bluesky.py  exengine.py
src/sunflare/device/: __init__.py  _base.py  _protocols.py
src/sunflare/engine/: __init__.py  _exceptions.py  _status.py  _utils.py  _wrapper.py  detector.py  handler.py  light.py  motor.py  protocols.py  registry.py  status.py
src/sunflare/interface/: __init__.py  virtualbus.py
src/sunflare/model/: __init__.py  _base.py  _protocols.py  protocols.py
statement/: index.html
stylesheets/: custom.css
tests/: __init__.py  conftest.py  mocks.py  test_config.py  test_containers.py  test_controller.py  test_detector.py  test_device.py  test_engine.py  test_log.py  test_model.py  test_msgspec.py  test_presenter.py  test_redsun.py  test_redsuntools.py  test_serialization.py  test_status.py  test_storage.py  test_view.py  test_virtual.py  test_virtualbus.py
tests/data/: controller_instance.yaml  detector_instance.yaml  empty_instance.yaml  full_instance.yaml  motor_instance.yaml  multi_model_instance.yaml  session_name.yaml  widget_instance.yaml
tests/interface/: test_virtualbus.py
tests/mocks/: __init__.py
tests/toolkit/: test_log.py
tutorials/: index.html
tutorials/oop-crash-course/: index.html
(+40 files in other folders)
