[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sunflare"
dynamic = ["version"]
description = "Redsun plugin development toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Jacopo Abramo", email = "jacopo.abramo@gmail.com"}
]
maintainers = [
  {name = "Jacopo Abramo", email = "jacopo.abramo@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "License :: OSI Approved :: Apache Software License",
]
license = {text = "Apache-2.0"}
dependencies = [
    "pyyaml>=6.0.2",
    "bluesky>=1.14.5",
    "attrs>=25.3.0",
    "psygnal>=0.15.0",
    "msgspec>=0.20.0",
    "pyzmq>=27.1.0",
    "typing-extensions>=4.14.0",
]

[dependency-groups]
dev = [
    "sunflare[pyqt]",
    "mypy>=1.19.0",
    "myst-parser>=4.0.1",
    "ophyd>=1.11.0",
    "pre-commit>=4.3.0",
    "pydata-sphinx-theme>=0.16.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
    "sphinx>=8.1.3",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-mermaid>=1.0.0",
    "types-pyyaml>=6.0.12.20250516",
]

[project.optional-dependencies]
dev = [
    "sunflare[pyqt]",
    "mypy>=1.19.0",
    "myst-parser>=4.0.1",
    "ophyd>=1.11.0",
    "pre-commit>=4.3.0",
    "pydata-sphinx-theme>=0.16.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
    "sphinx>=8.1.3",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-mermaid>=1.0.0",
    "types-pyyaml>=6.0.12.20250516",
]

pyqt = [
    "magicgui>=0.10.1",
    "pyqt6>=6.9.1",
    "qtpy>=2.4.3",
]
pyside = [
    "magicgui>=0.10.1",
    "pyside6>=6.9.1",
    "qtpy>=2.4.3",
]

[project.urls]
bugs = "https://github.com/redsun-acquisition/sunflare/issues"
changelog = "https://redsun-acquisition.github.io/sunflare/changelog/"
homepage = "https://github.com/redsun-acquisition/sunflare"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/sunflare"]
exclude = [
    "src/sunflare/docs",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/sunflare/*.py",
  "src/sunflare/docs/**",
  "tests/**",
]

[tool.mypy]
files = "src/**/*.py"
exclude = ["docs", "tests", "build"]
disable_error_code = ["import-untyped", "no-untyped-call"]
pretty = true

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
disallow_untyped_defs = true

[tool.coverage.run]
source = ["sunflare"]
omit = [
    "tests/conftest.py",
    "src/sunflare/view/**",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]

# https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.report]
exclude_lines = [
    "@abstractmethod",
    "if TYPE_CHECKING:",
    "@overload",
    "pragma: no cover",
    "except ImportError",
    "except PackageNotFoundError",
    "raise NotImplementedError()",
]

[tool.ruff]
target-version = "py39"
extend-exclude = ["docs"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "D", # enable docstring checks
    "I", # enable imports checks
    "TC", # enable type check imports
    "FA102", # force __future__ imports
] 
ignore = ["D100", "D104"] # https://docs.astral.sh/ruff/rules/undocumented-public-package/
exclude = ["tests/**"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
